--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Lora:wght@400;500&display=swap" rel="stylesheet">
-	<title>Chá de bebê do Francisco</title>
+	<title>Livro afetivo do Francisco</title>
 </head>
 <body>
 	<main>
@@ -39,11 +39,17 @@
 		<!-- <img src="src/inicial.jpeg"> -->
 		<div class="content content-about">
 			<div class="content-max-width content-flex">
-				<div>
+				<div class="content-about__description">
 					<h2>Olá pessoal</h2>
 					<p>
-						Pessoas queridas! Logo logo nosso Francisco estará aqui nesse mundão com a gente! Vocês sabem que queríamos muito compartilhar com vocês essa feliz espera com encontros, festa, comilança, gargalhadas e muitos abraços. Mas, nesses tempos pandemicos, precisamos ser cautelosos com os encontros. Pensamos nesse formato online para recebermos sua mensagem de carinho e também, para quem quiser e puder, deixar um presentinho de boas-vindas pro nosso Chicão.
-					</p>
+						Pessoas queridas! Logo, logo nosso Francisco estará aqui nesse mundão com a gente! Vocês sabem que queríamos muito compartilhar com vocês essa feliz espera com encontros, festa, comilança, gargalhadas e muitos abraços. Mas, nesses tempos pandêmicos, precisamos ser cautelosos com os encontros. Criamos esse "Livro Afetivo" online, para recebermos sua mensagem. Você poderá escrever, mandar um vídeo, uma foto ou fazer um cartãozinho com a sua mensagem para o Francisco, enfim, como preferir. Para enviar, é só clicar no botão abaixo:</p>
+						<a target="_blank"class="btn" href="https://drive.google.com/drive/folders/1-3Nzqrlo0rWLiVQss6wK8azPx1JQCVK_">acesse o link</a>
+						<p>
+							Todas essas mensagens serão reunidas em um livro afetivo digital que vamos sempre guardar e revisitar com muito carinho.
+						</p>
+						<p>
+							Para quem quiser e puder, deixar um presentinho de boas-vindas pro nosso Chicão, abaixo temos uma listinha de presentes também. 
+						</p>
 				</div>
 				<div class="foto">
 					<img src="src/nos.jpeg">
@@ -61,85 +67,121 @@
 				<div class="list-apresentation">
 					<h2>Lista de presentes</h2>
 					<h3>Como funciona?</h3>
-					<p>Clicando no link abaixo você poderá escrever, mandar uma foto, fazer um cartãozinho com a sua mensagem para o Francisco. Todas essas produções serão reunidas em um livro afetivo digital que vamos sempre guardar e revisitar com muito carinho.</p>
-					<p>
-						Se você quiser dar um presentinho para o Chico,  pode escolher entre as opções da lista abaixo ou então pode transferir via pix para 11982878553 ou 11979722028 a quantia que quiser.
-					</p>
+					<p>Se você quiser dar um presentinho para o Francisco,  pode escolher entre as opções desta lista, basta copiar o código e colar na área de pix do seu banco.  Você pode fazer um pix no valor sugerido ou então pode transferir via pix para 11982878553 ou 11979722028 a quantia que quiser.</p>
 				</div>
 				<div class="list">
 					<div class="list-item rainbow">
 						<div class="img img-1"></div>
 						<h4>Fraldas</h4>
 						<h5>Valor: R$60,00</h5>
-						<a href="https://nubank.com.br/pagar/1xfo/oSJ5KQyzya" target="_blank">Clique aqui!</a>
+						<div id='link' class='btn btn-hover'>
+							<span>Copie aqui!</span>
+							<p>00020126470014BR.GOV.BCB.PIX0114+55119797220280207FRALDA 520400005303986540560.005802BR5923MARINA MACHADO DA ROCHA6009SAO PAULO62250521lnTaicfIkDllXf4LKgzeV63041F5E</p>
+						</div>
 					</div>
 					<div class="list-item rainbow">
 						<div class="img img-2"></div>
 						<h4>Kit higiene</h4>
 						<h5>Valor: R$100,00</h5>
+						<div id='link' class='btn btn-hover'>
+							<span>Copie aqui!</span>
+							<p>00020126520014BR.GOV.BCB.PIX0114+55119797220280212KIT HIGIENE 5204000053039865406100.005802BR5923MARINA MACHADO DA ROCHA6009SAO PAULO62260522665dGuycvjkb26kEgBNzGW630484F2</p>
+						</div>
 					</div>
 					<div class="list-item rainbow">
 						<div class="img img-3"></div>
 						<h4>Toalha de banho</h4>
 						<h5>Valor: R$40,00</h5>
+						<div id='link' class='btn btn-hover'>
+							<span>Copie aqui!</span>
+							<p>00020126550014BR.GOV.BCB.PIX0114+55119797220280215TOALHA DE BANHO520400005303986540540.005802BR5923MARINA MACHADO DA ROCHA6009SAO PAULO622605225RHoo8N2MRSF6T7WtBH1Q763049EF6</p>
+						</div>
 					</div>
 					<div class="list-item rainbow">
 						<div class="img img-4"></div>
 						<h4>Roupas de cama</h4>
 						<h5>Valor: R$120,00</h5>
+						<div id='link' class='btn btn-hover'>
+							<span>Copie aqui!</span>
+							<p>00020126530014BR.GOV.BCB.PIX0114+55119797220280213ROUPA DE CAMA5204000053039865406120.005802BR5923MARINA MACHADO DA ROCHA6009SAO PAULO622605226i6TiqrjWbArS2OvTTREdu63045445</p>
+						</div>
 					</div>
 					<div class="list-item rainbow">
 						<div class="img img-5"></div>
 						<h4>Roupinhas</h4>
 						<h5>Valor: R$70,00</h5>
+						<div id='link' class='btn btn-hover'>
+							<span>Copie aqui!</span>
+							<p>00020126490014BR.GOV.BCB.PIX0114+55119797220280209ROUPINHAS520400005303986540570.005802BR5923MARINA MACHADO DA ROCHA6009SAO PAULO622605223v0KuwUQuIwegUDMc2VSEI63047B6E</p>
+						</div>
 					</div>
 					<div class="list-item rainbow">
 						<div class="img img-6"></div>
 						<h4>Móbile</h4>
 						<h5>Valor: R$80,00</h5>
+						<div id='link' class='btn btn-hover'>
+							<span>Copie aqui!</span>
+							<p>00020126470014BR.GOV.BCB.PIX0114+55119797220280207MOBILE 520400005303986540580.005802BR5923MARINA MACHADO DA ROCHA6009SAO PAULO622605222k3yI6nUfouKUtCgXN47hY6304A4D0</p>
+						</div>
 					</div>
 					<div class="list-item rainbow">
 						<div class="img img-7"></div>
 						<h4>Sling</h4>
 						<h5>Valor: R$60,00</h5>
+						<div id='link' class='btn btn-hover'>
+							<span>Copie aqui!</span>
+							<p>00020126450014BR.GOV.BCB.PIX0114+55119797220280205SLING520400005303986540560.005802BR5923MARINA MACHADO DA ROCHA6009SAO PAULO62250521mr714YMTbePfvA7XXtSIi6304DFC3</p>
+						</div>
 					</div>
 					<div class="list-item rainbow">
 						<div class="img img-8"></div>
 						<h4>Babá Eletrônica</h4>
 						<h5>Valor: R$300,00</h5>
+						<div id='link' class='btn btn-hover'>
+							<span>Copie aqui!</span>
+							<p>00020126560014BR.GOV.BCB.PIX0114+55119797220280216BABA ELETRONICA 5204000053039865406300.005802BR5923MARINA MACHADO DA ROCHA6009SAO PAULO622605224R6voos9QKfLAY0O9DQiaz63046DB3</p>
+						</div>
 					</div>
 					<div class="list-item rainbow">
 						<div class="img img-9"></div>
 						<h4>Bolsa de Maternidade</h4>
 						<h5>Valor: R$170,00</h5>
-					</div>
-					<div class="list-item rainbow">
-						<div class="img img-10"></div>
-						<h4>Carrinho de Bebê</h4>
-						<h5>Valor: R$1.300,00</h5>
-					</div>
-					<div class="list-item rainbow">
-						<div class="img img-11"></div>
-						<h4>Guarda Roupa</h4>
-						<h5>Valor: R$1700,00</h5>
+						<div id='link' class='btn btn-hover'>
+							<span>Copie aqui!</span>
+							<p>00020126580014BR.GOV.BCB.PIX0114+55119797220280218BOLSA MATERNIDADE 5204000053039865406170.005802BR5923MARINA MACHADO DA ROCHA6009SAO PAULO6226052247D8uzqfylMCRB4Nh1XKT5630456D8</p>
+						</div>
 					</div>
 					<div class="list-item rainbow">
 						<div class="img img-12"></div>
 						<h4>Brinquedos</h4>
 						<h5>Valor: R$50,00</h5>
+						<div id='link' class='btn btn-hover'>
+							<span>Copie aqui!</span>
+							<p>00020126510014BR.GOV.BCB.PIX0114+55119797220280211BRINQUEDOS 520400005303986540550.005802BR5923MARINA MACHADO DA ROCHA6009SAO PAULO622605224m26KEd94cDqYNQ2xSralp6304A210</p>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 		<footer>
 			<div class="content-max-width">
-				<h2>Nos mande uma mensagem</h2>
-				<p>Agradecemos por estar com a gente nesse momento. Em breve a gente vai poder se abraçar </p>
+				<h2>Agradecemos por estar com a gente nesse momento</h2>
+				<p>
+Em breve vamos poder nos abraçar e celebrar na presença de vocês.
+</p>
 			</div>
 			<div class="ursinho">
 				<img src="src/pass.png">
 			</div>
 		</footer>
+		<script>
+	  function copiarTexto() {
+	    var textoCopiado = document.getElementById("link");
+	    textoCopiado.select();
+	    document.execCommand("Copy");
+	    alert("Texto Copiado: " + textoCopiado.value);
+	  }
+	</script>
 	</main>
 </body>
 </html>
