--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<img src="src/passarinho.png">
 		</div>
 		<div class="texto">
-			<h1>Chá de Boas Vindas</h1>
+			<h1>Livro afetivo do</h1>
 			<h1>Francisco</h1>
 			
 		</div>
