--- a/index.html
+++ b/index.html
@@ -167,12 +167,13 @@
 			<div class="content-max-width">
 				<h2>Agradecemos por estar com a gente nesse momento</h2>
 				<p>
-Em breve vamos poder nos abraçar e celebrar na presença de vocês.
-</p>
+				Em breve vamos poder nos abraçar e celebrar na presença de vocês.
+				</p>
 			</div>
 			<div class="ursinho">
 				<img src="src/pass.png">
 			</div>
+			<a  class="footer-a"target="_blank" href="https://luisavilhena.com">Desenvolvido por Luisa Vilhena</a>
 		</footer>
 		<script>
 	  function copiarTexto() {
